add helper downloader tool for input

--- a/support/setup.cfg
+++ b/support/setup.cfg
@@ -3,3 +3,7 @@ name = support
 
 [options]
 py_modules = support
+
+[options.entry_points]
+console_scripts =
+    download-input = support:download_input
